name:                bbb-user-tracker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              Rafael Brandmaier
maintainer:          rafael.brandmaier@tum.de
copyright:           2021 Rafael Brandmaier
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bbb-user-tracker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hinotify,
                       bytestring,
                       directory,
                       Cabal == 3.2.1.0,
                       extra,
                       filepath,
                       strict
